Button to remove round

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <br>
 
 <button type="button" onclick="addRound()">Add Round</button>
+<button type="button" onclick="removeRound()">Remove Round</button>
 
 <table id="initiativeTable">
   <tr>
